KIO::iconNameForUrl: resolve icon for remote files based on name

Fix a regression introduced with eb20176d1a42eebd4c6c3cbdb5dca6a854760736

BUG: 429530
FIXED-IN: 5.77